Feat: Add granular text controls and new content

--- a/instatool/udatsu/index.html
+++ b/instatool/udatsu/index.html
@@ -156,71 +156,76 @@
     </div>
 
     <script>
-        // Default Data
+        // Default Data - Benefits of Udatsu
         let slidesData = [
             {
                 type: 'cover',
-                tag: 'Q&A',
-                title: 'よくある質問',
-                text: 'Q. どんな人におすすめ？\nQ. 本当に喋るだけでいいの？\nQ. どんな成果が期待できる？\nQ. まずは何から始めればいい？',
-                bgImage: 'img/udatsu_lifestyle_casual_2_1764726937947.png',
+                tag: 'Voice Journal',
+                title: 'SNS疲れ、\nしていませんか？',
+                text: '「綺麗な写真を撮らなきゃ」\n「上手な文章を書かなきゃ」\n\nそう思って、結局何も\n投稿できない日々...',
+                bgImage: 'img/udatsu_empathy.png',
                 imgStyle: 'cover',
                 fontScale: 1,
-                posX: 0,
-                posY: 0,
+                posX: 0, posY: 0,
                 tagScale: 1, tagX: 0, tagY: 0,
+                titleScale: 1, titleX: 0, titleY: 0, titleLineHeight: 1.2,
+                textScale: 1, textX: 0, textY: 0, textLineHeight: 1.8, textWidth: 100,
                 footerScale: 1, footerY: 0
             },
             {
                 type: 'content',
-                tag: 'Q1',
-                title: 'どんな人に\nおすすめ？',
-                text: '・発信したいけど続かない経営者\n・自分の強みを言語化したい専門家\n・営業が苦手な店舗オーナー\n・コンテンツ制作に時間を取れないクリエイター',
+                tag: 'Problem',
+                title: '飾った言葉では\n届かない',
+                text: '整えられた文章は美しいけれど、\nどこか冷たく、他人行儀。\n\nあなたの本当の熱量や\n人柄までは伝わりません。',
                 bgImage: '',
                 imgStyle: 'cover',
                 fontScale: 1,
-                posX: 0,
-                posY: 0,
+                posX: 0, posY: 0,
                 tagScale: 1, tagX: 0, tagY: 0,
+                titleScale: 1, titleX: 0, titleY: 0, titleLineHeight: 1.2,
+                textScale: 1, textX: 0, textY: 0, textLineHeight: 1.8, textWidth: 100,
                 footerScale: 1, footerY: 0
             },
             {
                 type: 'content',
-                tag: 'Q2',
-                title: '本当に喋るだけで\nいいの？',
-                text: 'はい、準備は一切不要です。\n\nスマホに向かって話すだけ。\n書くより圧倒的に速く、\n感情やニュアンスまで保存できます。\n\nAIとプロ編集者が\n読まれるコンテンツに仕上げます。',
-                bgImage: 'img/udatsu_lifestyle_casual_3_1764726954817.png',
+                tag: 'Solution',
+                title: 'Udatsuなら、\n話すだけでいい',
+                text: 'スマホに向かって、\n友人に話すように語るだけ。\n\nAIとプロの編集者が、\nあなたの「生の声」を\n魅力的なコンテンツに仕上げます。',
+                bgImage: 'img/udatsu_solution.png',
                 imgStyle: 'cover',
                 fontScale: 1,
-                posX: 0,
-                posY: 0,
+                posX: 0, posY: 0,
                 tagScale: 1, tagX: 0, tagY: 0,
+                titleScale: 1, titleX: 0, titleY: 0, titleLineHeight: 1.2,
+                textScale: 1, textX: 0, textY: 0, textLineHeight: 1.8, textWidth: 100,
                 footerScale: 1, footerY: 0
             },
             {
                 type: 'content',
-                tag: 'Q3',
-                title: 'どんな成果が\n期待できる？',
-                text: '✓ Note記事が毎日自動更新\n✓ SEO対策で検索上位を狙える\n✓ 継続的な発信でファンが増える\n\n※導入企業様の事例：\n「広島 ブランディング」で\n検索上位を獲得しました。',
-                bgImage: '',
+                tag: 'Benefit',
+                title: '飾らないから、\n深くつながる',
+                text: '完璧じゃなくていい。\n人間味のある言葉だからこそ、\n共感が生まれ、ファンができる。\n\n「あなただから」と\n選ばれるようになります。',
+                bgImage: 'img/udatsu_benefit.png',
                 imgStyle: 'cover',
                 fontScale: 1,
-                posX: 0,
-                posY: 0,
+                posX: 0, posY: 0,
                 tagScale: 1, tagX: 0, tagY: 0,
+                titleScale: 1, titleX: 0, titleY: 0, titleLineHeight: 1.2,
+                textScale: 1, textX: 0, textY: 0, textLineHeight: 1.8, textWidth: 100,
                 footerScale: 1, footerY: 0
             },
             {
                 type: 'cta',
-                tag: 'Q4',
-                title: 'まずは何から\n始めればいい？',
-                text: '無料相談（30分）から\nスタートできます。\n\n実際にあなたの声から\n記事を作成する体験も可能。\n\n詳細はプロフィールリンクから\n→ @udatsuageteko',
+                tag: 'Start Now',
+                title: 'まずは無料で\n声を残そう',
+                text: 'あなたの想いを、\n音声という資産に。\n\n無料相談・体験実施中。\n詳細はプロフィールリンクから\n→ @udatsuageteko',
                 bgImage: 'img/udatsu_lifestyle_casual_1_1764726921299.png',
                 imgStyle: 'cover',
                 fontScale: 1,
-                posX: 0,
-                posY: 0,
+                posX: 0, posY: 0,
                 tagScale: 1, tagX: 0, tagY: 0,
+                titleScale: 1, titleX: 0, titleY: 0, titleLineHeight: 1.2,
+                textScale: 1, textX: 0, textY: 0, textLineHeight: 1.8, textWidth: 100,
                 footerScale: 1, footerY: 0
             }
         ];
@@ -285,9 +290,24 @@
 
                         <label>Title (Big)</label>
                         <textarea oninput="updateSlide(${index}, 'title', this.value)">${slide.title}</textarea>
+                        <div style="display:flex; gap:5px;">
+                            <input type="range" min="0.5" max="2" step="0.1" value="${slide.titleScale || 1}" oninput="updateSlide(${index}, 'titleScale', this.value)" title="Size">
+                            <input type="range" min="0.8" max="2" step="0.1" value="${slide.titleLineHeight || 1.2}" oninput="updateSlide(${index}, 'titleLineHeight', this.value)" title="Line Height">
+                            <input type="range" min="-100" max="100" step="5" value="${slide.titleX || 0}" oninput="updateSlide(${index}, 'titleX', this.value)" title="X">
+                            <input type="range" min="-100" max="100" step="5" value="${slide.titleY || 0}" oninput="updateSlide(${index}, 'titleY', this.value)" title="Y">
+                        </div>
                         
                         <label>Body Text</label>
                         <textarea oninput="updateSlide(${index}, 'text', this.value)">${slide.text}</textarea>
+                        <div style="display:flex; gap:5px;">
+                            <input type="range" min="0.5" max="2" step="0.1" value="${slide.textScale || 1}" oninput="updateSlide(${index}, 'textScale', this.value)" title="Size">
+                            <input type="range" min="1" max="3" step="0.1" value="${slide.textLineHeight || 1.8}" oninput="updateSlide(${index}, 'textLineHeight', this.value)" title="Line Height">
+                            <input type="range" min="50" max="100" step="5" value="${slide.textWidth || 100}" oninput="updateSlide(${index}, 'textWidth', this.value)" title="Width %">
+                        </div>
+                        <div style="display:flex; gap:5px;">
+                            <input type="range" min="-100" max="100" step="5" value="${slide.textX || 0}" oninput="updateSlide(${index}, 'textX', this.value)" title="X">
+                            <input type="range" min="-100" max="100" step="5" value="${slide.textY || 0}" oninput="updateSlide(${index}, 'textY', this.value)" title="Y">
+                        </div>
                         
                         <label>Background Image</label>
                         <input type="text" placeholder="Image URL" value="${slide.bgImage || ''}" oninput="updateSlide(${index}, 'bgImage', this.value)">
@@ -348,6 +368,8 @@
                 fontScale: 1,
                 posX: 0, posY: 0,
                 tagScale: 1, tagX: 0, tagY: 0,
+                titleScale: 1, titleX: 0, titleY: 0, titleLineHeight: 1.2,
+                textScale: 1, textX: 0, textY: 0, textLineHeight: 1.8, textWidth: 100,
                 footerScale: 1, footerY: 0
             });
             renderInputs();
@@ -417,10 +439,22 @@
             el.style.setProperty('--pos-x', (data.posX || 0) + 'px');
             el.style.setProperty('--pos-y', (data.posY || 0) + 'px');
 
-            // New granular controls
+            // Granular controls
             el.style.setProperty('--tag-scale', data.tagScale || 1);
             el.style.setProperty('--tag-x', (data.tagX || 0) + 'px');
             el.style.setProperty('--tag-y', (data.tagY || 0) + 'px');
+
+            el.style.setProperty('--title-scale', data.titleScale || 1);
+            el.style.setProperty('--title-x', (data.titleX || 0) + 'px');
+            el.style.setProperty('--title-y', (data.titleY || 0) + 'px');
+            el.style.setProperty('--title-lh', data.titleLineHeight || 1.2);
+
+            el.style.setProperty('--text-scale', data.textScale || 1);
+            el.style.setProperty('--text-x', (data.textX || 0) + 'px');
+            el.style.setProperty('--text-y', (data.textY || 0) + 'px');
+            el.style.setProperty('--text-lh', data.textLineHeight || 1.8);
+            el.style.setProperty('--text-width', (data.textWidth || 100) + '%');
+
             el.style.setProperty('--footer-scale', data.footerScale || 1);
             el.style.setProperty('--footer-y', (data.footerY || 0) + 'px');
 
@@ -442,7 +476,7 @@
                 contentHtml = `
                     ${bgImageHtml}
                     <div class="text-overlay">
-                        <div class="slide-title" style="font-size: 3rem;">${data.title.replace(/\n/g, '<br>')}</div>
+                        <div class="slide-title" style="font-size: 3rem; transform: translate(var(--title-x), var(--title-y)) scale(var(--title-scale));">${data.title.replace(/\n/g, '<br>')}</div>
                     </div>
                 `;
             } else {
@@ -450,8 +484,8 @@
                     ${bgImageHtml}
                     <div class="slide-content">
                         <div class="slide-tag">${data.tag}</div>
-                        <div class="slide-title">${data.title.replace(/\n/g, '<br>')}</div>
-                        <div class="slide-text">${data.text.replace(/\n/g, '<br>')}</div>
+                        <div class="slide-title" style="transform: translate(var(--title-x), var(--title-y)) scale(var(--title-scale)); line-height: var(--title-lh);">${data.title.replace(/\n/g, '<br>')}</div>
+                        <div class="slide-text" style="transform: translate(var(--text-x), var(--text-y)) scale(var(--text-scale)); line-height: var(--text-lh); width: var(--text-width);">${data.text.replace(/\n/g, '<br>')}</div>
                         ${footerHtml}
                     </div>
                 `;
