--- a/instatool/udatsu/index.html
+++ b/instatool/udatsu/index.html
@@ -319,6 +319,13 @@
                             <option value="contain" ${slide.imgStyle === 'contain' ? 'selected' : ''}>Contain (Fit)</option>
                             <option value="corner" ${slide.imgStyle === 'corner' ? 'selected' : ''}>Corner Illustration</option>
                         </select>
+                        
+                        <label>Image Position (Scale / X / Y)</label>
+                        <div style="display:flex; gap:5px;">
+                            <input type="range" min="0.1" max="3" step="0.1" value="${slide.bgScale || 1}" oninput="updateSlide(${index}, 'bgScale', this.value)" title="Scale">
+                            <input type="range" min="-500" max="500" step="10" value="${slide.bgX || 0}" oninput="updateSlide(${index}, 'bgX', this.value)" title="X">
+                            <input type="range" min="-500" max="500" step="10" value="${slide.bgY || 0}" oninput="updateSlide(${index}, 'bgY', this.value)" title="Y">
+                        </div>
 
                         <label>Font Scale (このスライドのみ)</label>
                         <input type="range" min="0.5" max="2" step="0.1" value="${slide.fontScale}" oninput="updateSlide(${index}, 'fontScale', this.value)">
@@ -365,6 +372,7 @@
                 text: 'Text here...',
                 bgImage: '',
                 imgStyle: 'cover',
+                bgScale: 1, bgX: 0, bgY: 0,
                 fontScale: 1,
                 posX: 0, posY: 0,
                 tagScale: 1, tagX: 0, tagY: 0,
@@ -438,6 +446,11 @@
             el.style.setProperty('--bg-opacity', globalStyles['bg-opacity']);
             el.style.setProperty('--pos-x', (data.posX || 0) + 'px');
             el.style.setProperty('--pos-y', (data.posY || 0) + 'px');
+
+            // Background Image Controls
+            el.style.setProperty('--bg-scale', data.bgScale || 1);
+            el.style.setProperty('--bg-x', (data.bgX || 0) + 'px');
+            el.style.setProperty('--bg-y', (data.bgY || 0) + 'px');
 
             // Granular controls
             el.style.setProperty('--tag-scale', data.tagScale || 1);
