Update Udatsu slides: Note posting fatigue theme

--- a/instatool/udatsu/index.html
+++ b/instatool/udatsu/index.html
@@ -156,13 +156,13 @@
     </div>
 
     <script>
-        // Default Data - Benefits of Udatsu
+        // Default Data - Note Posting Fatigue Theme
         let slidesData = [
             {
                 type: 'cover',
-                tag: 'Voice Journal',
-                title: 'SNS疲れ、\nしていませんか？',
-                text: '「綺麗な写真を撮らなきゃ」\n「上手な文章を書かなきゃ」\n\nそう思って、結局何も\n投稿できない日々...',
+                tag: 'Content Creator',
+                title: '毎日のnote発信、\nだるすぎ',
+                text: '「今日も何か書かなきゃ」\n「ネタが思いつかない」\n「文章にまとめる時間がない」\n\n...もう疲れた。',
                 bgImage: 'img/udatsu_empathy.png',
                 imgStyle: 'cover',
                 fontScale: 1,
@@ -175,8 +175,8 @@
             {
                 type: 'content',
                 tag: 'Problem',
-                title: '飾った言葉では\n届かない',
-                text: '整えられた文章は美しいけれど、\nどこか冷たく、他人行儀。\n\nあなたの本当の熱量や\n人柄までは伝わりません。',
+                title: 'ネタ探しと文章作成で\n1日が終わる',
+                text: 'ネタを考えて、構成を練って、\n文章を書いて、推敲して...\n\n気づけば2〜3時間。\n本業に使うべき時間が\nどんどん削られていく。',
                 bgImage: '',
                 imgStyle: 'cover',
                 fontScale: 1,
@@ -189,8 +189,8 @@
             {
                 type: 'content',
                 tag: 'Solution',
-                title: 'Udatsuなら、\n話すだけでいい',
-                text: 'スマホに向かって、\n友人に話すように語るだけ。\n\nAIとプロの編集者が、\nあなたの「生の声」を\n魅力的なコンテンツに仕上げます。',
+                title: 'Udatsuなら、\n話すだけで記事完成',
+                text: 'スマホに向かって、\n思いついたことを話すだけ。\n\nAIとプロの編集者が、\nあなたの声を\nnote記事に仕上げます。',
                 bgImage: 'img/udatsu_solution.png',
                 imgStyle: 'cover',
                 fontScale: 1,
@@ -203,8 +203,8 @@
             {
                 type: 'content',
                 tag: 'Benefit',
-                title: '飾らないから、\n深くつながる',
-                text: '完璧じゃなくていい。\n人間味のある言葉だからこそ、\n共感が生まれ、ファンができる。\n\n「あなただから」と\n選ばれるようになります。',
+                title: '時間が生まれる。\n本業に集中できる',
+                text: '記事作成にかかる時間が\n1/10以下に。\n\n浮いた時間で、本業や\n新しい挑戦に集中できる。\n発信も続けられる。',
                 bgImage: 'img/udatsu_benefit.png',
                 imgStyle: 'cover',
                 fontScale: 1,
@@ -217,8 +217,8 @@
             {
                 type: 'cta',
                 tag: 'Start Now',
-                title: 'まずは無料で\n声を残そう',
-                text: 'あなたの想いを、\n音声という資産に。\n\n無料相談・体験実施中。\n詳細はプロフィールリンクから\n→ @udatsuageteko',
+                title: 'まずは無料で\n試してみよう',
+                text: '発信の負担を減らして、\n本当に大切なことに時間を使おう。\n\n無料相談・体験実施中。\n詳細はプロフィールリンクから\n→ @udatsuageteko',
                 bgImage: 'img/udatsu_lifestyle_casual_1_1764726921299.png',
                 imgStyle: 'cover',
                 fontScale: 1,
