--- a/instatool/udatsu/post_custom_restored.html
+++ b/instatool/udatsu/post_custom_restored.html
@@ -89,11 +89,7 @@
             <div class="editor-header">
                 <h1>Udatsu Post Gen</h1>
                 <p style="font-size: 0.8rem; color: #888;">Create up to 10 slides</p>
-                <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                    <a href="post_method_slide.html" class="btn btn-secondary"
-                        style="text-decoration:none; display:inline-flex; align-items:center; justify-content:center; gap:5px;">
-                        <i class="fas fa-layer-group"></i> Method Tool
-                    </a>
+                <div style="display: flex; gap: 10px;">
                     <button class="btn btn-secondary" onclick="toggleExportMode()">
                         <i class="fas fa-images"></i> Export Mode
                     </button>
@@ -165,7 +161,7 @@
             {
                 type: 'cover',
                 tag: 'Content Creator',
-                title: '毎日のnote発信、\nだるすぎ',
+                title: '毎日のnote発信、\nだるすぎ？',
                 text: '「今日も何か書かなきゃ」\n「ネタが思いつかない」\n「文章にまとめる時間がない」\n\n...もう疲れた。',
                 bgImage: 'img/udatsu_empathy.png',
                 imgStyle: 'cover',
@@ -181,7 +177,7 @@
                 tag: 'Problem',
                 title: 'ネタ探しと文章作成で\n1日が終わる',
                 text: 'ネタを考えて、構成を練って、\n文章を書いて、推敲して...\n\n気づけば2〜3時間。\n本業に使うべき時間が\nどんどん削られていく。',
-                bgImage: '',
+                bgImage: 'img/concrete_bg.png',
                 imgStyle: 'cover',
                 fontScale: 1,
                 posX: 0, posY: 0,
