--- a/instatool/udatsu/post_method_slide.html
+++ b/instatool/udatsu/post_method_slide.html
@@ -409,7 +409,13 @@
         <div class="editor-panel">
             <div class="editor-header">
                 <h1>Udatsu Carousel Builder</h1>
-                <p>Frames, Style & Illustrations</p>
+                <p style="font-size: 0.8rem; color: #888;">Frames, Style & Illustrations</p>
+                <div style="margin-top: 10px;">
+                    <a href="index.html" class="btn btn-secondary"
+                        style="text-decoration:none; display:inline-flex; align-items:center; justify-content:center; gap:5px; background:#ddd; color:#333; padding:8px 15px; border-radius:4px; font-weight:bold; font-size:0.8rem;">
+                        <i class="fas fa-arrow-left"></i> Ad Generator
+                    </a>
+                </div>
             </div>
 
             <div class="slide-tabs">
