feat: add voice school carousel tool

--- a/instatool/udatsu/index.html
+++ b/instatool/udatsu/index.html
@@ -91,8 +91,12 @@
                 <p style="font-size: 0.8rem; color: #888;">Create up to 10 slides</p>
                 <div style="display: flex; gap: 10px; flex-wrap: wrap;">
                     <a href="post_method_slide.html" class="btn btn-secondary"
-                        style="text-decoration:none; display:inline-flex; align-items:center; justify-content:center; gap:5px;">
-                        <i class="fas fa-layer-group"></i> Method Tool
+                        style="text-decoration:none; display:inline-flex; align-items:center; justify-content:center; gap:5px; font-size:0.8rem; padding:8px;">
+                        <i class="fas fa-layer-group"></i> Udatsu Method
+                    </a>
+                    <a href="../../instatool/voiceschool/post_voice_school_slide.html" class="btn btn-secondary"
+                        style="background:#00E5FF; color:#333; text-decoration:none; display:inline-flex; align-items:center; justify-content:center; gap:5px; font-size:0.8rem; padding:8px;">
+                        <i class="fas fa-microphone"></i> Voice School
                     </a>
                     <button class="btn btn-secondary" onclick="toggleExportMode()">
                         <i class="fas fa-images"></i> Export Mode
