--- a/instatool/voiceschool/post_voice_school_slide.html
+++ b/instatool/voiceschool/post_voice_school_slide.html
@@ -535,7 +535,7 @@
                 <!-- Footer Control -->
                 <div class="control-group">
                     <h3>Footer</h3>
-                    <div class="input-row"><input type="text" id="footer-text" value="@nyctstudio"
+                    <div class="input-row"><input type="text" id="footer-text" value="@nayudatsu"
                             oninput="updateGlobalFooter()"></div>
                     <div class="slider-grid">
                         <div class="slider-item"><span>Bottom Offset (px)</span><input type="range" id="footer-bottom"
@@ -580,9 +580,7 @@
 
                     <div id="wrap-footer" class="footer-box">
                         <div style="display: flex; align-items: center; gap: 10px;">
-                            <!-- Updated Logo to Voice School / Generic -->
-                            <span style="font-weight: bold; font-size: 2.0rem; letter-spacing: 0.05em; color:#333;">NYCT
-                                Studio</span>
+                            <!-- Left Footer Empty as requested -->
                         </div>
                         <div id="render-footer-text" style="font-size: 1.6rem; opacity: 0.8; color:#333;">@id</div>
                     </div>
@@ -592,46 +590,46 @@
     </div>
 
     <script>
-        // --- Initial Data (Voice School Theme) ---
+        // --- Initial Data (Voice School Theme - Nayudatsu Thought Assets) ---
         const defaultSlides = [
             {
-                tag: "VOICE LESSON", tagS: 1.0, catch: "あなたがモテないのは、\nその「声」のせいかも\nしれません。", sub: "",
+                tag: "VOICE CHECK", tagS: 1.0, catch: "あなたがモテないのは、\nその「声」のせいかも？", sub: "",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.9, scale: 1.1,
                 tagM: 120, catchS: 7.0, catchM: 80, subS: 2.2, subM: 40,
                 frame: "simple", deco: "fas fa-comment fa-flip-horizontal", decoS: 15, decoX: 50, decoY: 20, decoO: 0.2
             },
             {
-                tag: "REALITY", tagS: 1.0, catch: "人は「話し方」で\n印象の9割を決める。", sub: "言ってることは正しいのに、\nなぜか話が通じない。\n\nそれは、あなたの声のトーンや\n話し方が原因かもしれません。",
+                tag: "REALITY", tagS: 1.0, catch: "「話す内容」は正しい。\nでも嫌われる。", sub: "話し方がキツイ、嫌味っぽい。\n言っていることは正論なのに、\nなぜか人が離れていく。\n\nそれ、損していませんか？",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-exclamation", decoS: 20, decoX: 80, decoY: 80, decoO: 0.1
             },
             {
-                tag: "BLIND SPOT", tagS: 1.0, catch: "自分の話し方は\n自分では分からない。", sub: "自分の声、録音して聞いたことはありますか？\n\n「なんか嫌な感じ」と思っている自分の声こそ、\n他人が聞いているあなたの『本当の声』です。",
+                tag: "BLIND SPOT", tagS: 1.0, catch: "自分の声、\n録音して聞いてますか？", sub: "「自分の声を聞くのが嫌」\n\nそれは、他人が毎日聞いている\nあなたの声を直視していない証拠です。\nそこに「嫌われる原因」があります。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-microphone", decoS: 20, decoX: 20, decoY: 30, decoO: 0.1
             },
             {
-                tag: "PROFESSIONAL", tagS: 1.0, catch: "声のプロは\n毎日「確認」する。", sub: "自分を客観視できるかどうか。\n\nそれが、\n「好かれる人」と「嫌われる人」の\n決定的な差です。",
+                tag: "PROFESSIONAL", tagS: 1.0, catch: "声は「技術」で\n変えられる。", sub: "声質は生まれつきではありません。\n\n出し方、トーン、間（ま）。\nプロはそれをコントロールして\n「好かれる声」を作っています。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-check", decoS: 20, decoX: 50, decoY: 90, decoO: 0.1
             },
             {
-                tag: "TRAINING", tagS: 1.0, catch: "声は、技術で\nコントロールできる。", sub: "持って生まれたものではありません。\n\n出し方、強さ、間（ま）。\n正しいトレーニングで、\nあなたの印象は劇的に変わります。",
+                tag: "CHANGE", tagS: 1.0, catch: "声が変われば、\n人生の「うだつ」が上がる。", sub: "営業、マネジメント、接客。\n\n声を鍛えるだけで、\nあなたの評価も収入も\n劇的に変わる可能性があります。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-lightbulb", decoS: 15, decoX: 80, decoY: 20, decoO: 0.1
             },
             {
-                tag: "TRY NOW", tagS: 1.0, catch: "「嫌われる話し方」\n卒業しませんか？", sub: "あなたの声のどこが「損」をしているのか、\nプロが診断します。\nまずは30分、試してみてください。",
-                bonus: "初回体験レッスン 30分無料", bonusS: 2.5, cta: "詳しくはプロフィールへ", ctaS: 2.2,
+                tag: "ACTION", tagS: 1.0, catch: "まずは30分、\n僕に時間をください。", sub: "あなた自身の「思考資産」を\n声に乗せる方法、教えます。\n\n初回レッスンは無料です。",
+                bonus: "詳しくはプロフィールへ", bonusS: 2.5, cta: "うだつを上げる", ctaS: 2.2,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.85, scale: 1.1,
                 tagM: 60, catchS: 6.0, catchM: 40, subS: 2.0, subM: 40,
                 frame: "corner", deco: "fas fa-arrow-down", decoS: 10, decoX: 50, decoY: 70, decoO: 0.4
