update: refresh voice school tool with 'Trustworthy Speaking' content

--- a/instatool/voiceschool/post_voice_school_slide.html
+++ b/instatool/voiceschool/post_voice_school_slide.html
@@ -590,52 +590,51 @@
     </div>
 
     <script>
-        // --- Initial Data (Voice School Theme - Nayudatsu Thought Assets) ---
+        // --- Initial Data (Voice School Theme - Trustworthy Speaking) ---
         const defaultSlides = [
             {
-                tag: "VOICE CHECK", tagS: 1.0, catch: "あなたがモテないのは、\nその「声」のせいかも？", sub: "",
+                tag: "TRUST", tagS: 1.0, catch: "「この人、本当に信用できる？」\nそう思われる話し方の正体。", sub: "",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.9, scale: 1.1,
-                tagM: 120, catchS: 7.0, catchM: 80, subS: 2.2, subM: 40,
-                frame: "simple", deco: "fas fa-comment fa-flip-horizontal", decoS: 15, decoX: 50, decoY: 20, decoO: 0.2
+                tagM: 120, catchS: 6.5, catchM: 80, subS: 2.2, subM: 40,
+                frame: "simple", deco: "fas fa-question", decoS: 15, decoX: 50, decoY: 20, decoO: 0.2
             },
             {
-                tag: "REALITY", tagS: 1.0, catch: "「話す内容」は正しい。\nでも嫌われる。", sub: "話し方がキツイ、嫌味っぽい。\n言っていることは正論なのに、\nなぜか人が離れていく。\n\nそれ、損していませんか？",
+                tag: "REALITY", tagS: 1.0, catch: "仕事ができる人と、できない人。\n決定的な差は「声の高さ」にあった。", sub: "言っていることは同じでも、\nなぜか説得力が違う。\n\nその秘密は、声の「キー（高さ）」の\nコントロールにあります。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
-                tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
+                tagM: 100, catchS: 5.5, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-exclamation", decoS: 20, decoX: 80, decoY: 80, decoO: 0.1
             },
             {
-                tag: "BLIND SPOT", tagS: 1.0, catch: "自分の声、\n録音して聞いてますか？", sub: "「自分の声を聞くのが嫌」\n\nそれは、他人が毎日聞いている\nあなたの声を直視していない証拠です。\nそこに「嫌われる原因」があります。",
+                tag: "PROBLEM", tagS: 1.0, catch: "ずっと声が高い人は、\n「何も考えていない」と思われる。", sub: "一本調子で高い声のままだと、\nどうしても「軽薄」「適当」な印象を与えます。\n\n逆に、ただ低いだけだと\n「不機嫌」「怖い」と思われてしまいます。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
-                tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
-                frame: "simple", deco: "fas fa-microphone", decoS: 20, decoX: 20, decoY: 30, decoO: 0.1
+                tagM: 100, catchS: 5.5, catchM: 60, subS: 2.2, subM: 60,
+                frame: "simple", deco: "fas fa-microphone-slash", decoS: 20, decoX: 20, decoY: 30, decoO: 0.1
             },
             {
-                tag: "PROFESSIONAL", tagS: 1.0, catch: "声は「技術」で\n変えられる。", sub: "声質は生まれつきではありません。\n\n出し方、トーン、間（ま）。\nプロはそれをコントロールして\n「好かれる声」を作っています。",
+                tag: "METHOD", tagS: 1.0, catch: "信頼される話し方の黄金法則。\n「入りは高く、徐々に低く」。", sub: "話し始めは明るく高めに。\nそこから語尾に向かって、\nゆっくりと落ち着かせていく。\n\nこれが「知性」と「安心感」を作る技術です。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
-                tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
-                frame: "simple", deco: "fas fa-check", decoS: 20, decoX: 50, decoY: 90, decoO: 0.1
+                tagM: 100, catchS: 5.5, catchM: 60, subS: 2.2, subM: 60,
+                frame: "simple", deco: "fas fa-arrow-right", decoS: 20, decoX: 50, decoY: 90, decoO: 0.1
             },
             {
-                tag: "CHANGE", tagS: 1.0, catch: "声が変われば、\n人生の「うだつ」が上がる。", sub: "営業、マネジメント、接客。\n\n声を鍛えるだけで、\nあなたの評価も収入も\n劇的に変わる可能性があります。",
+                tag: "IMPACT", tagS: 1.0, catch: "声のコントロール一つで、\nあなたの評価は劇的に変わる。", sub: "「この人に任せたい」\n「この人の話なら聞きたい」\n\n信頼は、言葉の内容以前に\n『声』で作られるのです。",
                 bonus: "", bonusS: 1.8, cta: "", ctaS: 1.8,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.92, scale: 1.1,
                 tagM: 100, catchS: 6.0, catchM: 60, subS: 2.2, subM: 60,
                 frame: "simple", deco: "fas fa-lightbulb", decoS: 15, decoX: 80, decoY: 20, decoO: 0.1
             },
             {
-                tag: "ACTION", tagS: 1.0, catch: "まずは30分、\n僕に時間をください。", sub: "あなた自身の「思考資産」を\n声に乗せる方法、教えます。\n\n初回レッスンは無料です。",
-                bonus: "詳しくはプロフィールへ", bonusS: 2.5, cta: "うだつを上げる", ctaS: 2.2,
+                tag: "OFFER", tagS: 1.0, catch: "「信頼される声」を手に入れる。\nプロが教える30分。", sub: "あなたの話し方のクセを診断し、\n「仕事ができる声」へチューニングします。\n\nまずは無料で体験しませんか？",
+                bonus: "詳しくはプロフィールへ", bonusS: 2.5, cta: "体験レッスンに申し込む", ctaS: 2.0,
                 bg: "../../instatool/udatsu/img/white_desk.jpg", overlay: 0.85, scale: 1.1,
                 tagM: 60, catchS: 6.0, catchM: 40, subS: 2.0, subM: 40,
                 frame: "corner", deco: "fas fa-arrow-down", decoS: 10, decoX: 50, decoY: 70, decoO: 0.4
             }
         ];
-
         let slides = JSON.parse(JSON.stringify(defaultSlides)); // Deep copy
         let currentIndex = 0;
 
