--- a/gyakubari_note_image/index.html
+++ b/gyakubari_note_image/index.html
@@ -76,7 +76,8 @@
             class="w-full md:w-2/3 bg-black flex items-center justify-center p-4 rounded-lg relative overflow-hidden bg-checkered">
             <div id="canvasArea" class="relative shadow-2xl overflow-hidden select-none"
                 style="width: 1280px; height: 670px; transform: scale(0.6); transform-origin: center;">
-                <img id="bgImage" src="./default_bg.jpg" class="absolute inset-0 w-full h-full object-cover z-0">
+                <img id="bgImage" src="./default_bg.png" class="absolute top-0 left-0 w-full h-full z-0"
+                    style="object-fit: contain;">
                 <!-- No Overlay -->
 
                 <!-- Single Text Layer -->
