--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -27,73 +27,94 @@
             margin: 0;
         }
 
-        /* Typography Adjustments for Readability */
+        /* Typography Adjustments */
         .reveal h1 {
-            font-size: 2.4em !important;
-            margin: 20px 0 30px 0 !important;
+            font-size: 2.2em !important;
+            margin: 10px 0 20px 0 !important;
         }
 
         .reveal h2 {
-            font-size: 1.6em !important;
-            margin-bottom: 25px !important;
+            font-size: 1.5em !important;
+            margin-bottom: 20px !important;
             border-left: 10px solid #000;
+            padding-left: 15px;
         }
 
         .reveal h3 {
-            font-size: 1.2em !important;
-            margin-top: 15px !important;
-            margin-bottom: 10px !important;
+            font-size: 1.1em !important;
+            margin-top: 10px !important;
+            margin-bottom: 5px !important;
             color: #000;
         }
 
-        /* Body Text: Increased from 16px to 21px for readability */
+        /* Adjusted for fit: 19px instead of 21px to prevent overflow */
         .reveal p,
         .reveal li {
-            font-size: 21px !important;
+            font-size: 19px !important;
             line-height: 1.5 !important;
             color: #111;
         }
 
         .reveal ul {
-            margin-left: 40px !important;
+            margin-left: 30px !important;
         }
 
         .reveal li {
-            margin-bottom: 8px !important;
+            margin-bottom: 5px !important;
         }
 
-        /* Compact Layout components to fit larger text */
+        /* Compact Layout components */
         .box {
-            padding: 20px;
-            margin: 15px 0;
+            padding: 15px;
+            margin: 10px 0;
             background: #f4f4f4;
-            /* Slightly darker for contrast */
             border: 1px solid #ccc;
         }
 
         .cols {
-            gap: 30px;
+            display: flex;
+            gap: 20px;
+        }
+
+        .col-6 {
+            flex: 1;
+        }
+
+        .col-4 {
+            flex: 1;
+        }
+
+        /* Helper to force smaller text in tight boxes */
+        .dense-text p,
+        .dense-text li {
+            font-size: 17px !important;
         }
 
         /* Table adjustments */
         table {
-            font-size: 19px !important;
+            font-size: 17px !important;
+            width: 100%;
+            border-collapse: collapse;
         }
 
         th {
             background: #e0e0e0;
             color: #000;
-            padding: 12px;
+            padding: 8px;
+            font-weight: bold;
         }
 
         td {
-            padding: 12px;
+            padding: 8px;
+            border: 1px solid #ccc;
         }
 
-        /* Helper for small notes */
-        .small-note {
-            font-size: 0.7em !important;
-            color: #666;
+        .slide-number {
+            position: absolute;
+            bottom: 20px;
+            right: 30px;
+            font-size: 14px;
+            color: #999;
         }
     </style>
 </head>
@@ -110,10 +131,10 @@
                     </h1>
                     <p style="font-size: 1em;">2025 Strategic Growth Plan</p>
                 </div>
-                <div class="slide-number">1 / 9</div>
+                <!-- <div class="slide-number">1 / 9</div> -->
             </section>
 
-            <!-- 2. The Logic (Psychology) -->
+            <!-- 2. The Logic -->
             <section>
                 <h2>0. 戦略根拠：なぜ今「静かな戦略」なのか？</h2>
                 <div class="cols">
@@ -121,24 +142,21 @@
                         <div class="box">
                             <h3>① 視聴維持率 (Retention)</h3>
                             <p><strong>「いいね」より「離脱されない」が正義。</strong></p>
-                            <p>ASMR（衣擦れの音）やマクロ撮影（質感）は、脳に直接的な快感を与えます。<br>
-                                言語情報を介さず、無意識に「最後まで見てしまう」状態を作ります。</p>
+                            <p>ASMR（衣擦れの音）やマクロ撮影（質感）は、脳に直接的な快感を与えます。言語情報を介さず、無意識に「最後まで見てしまう」状態を作ります。</p>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="box">
                             <h3>② 保存数 (Saves)</h3>
                             <p><strong>エンタメより「憧れの蓄積」へ。</strong></p>
-                            <p>説明しすぎない「余白」のある動画は、<br>
-                                「いつかこうなりたい」という没入感を生み、ユーザーは<br>
-                                「後で見返すため」に保存ボタンを押します。</p>
+                            <p>説明しすぎない「余白」のある動画は、「いつかこうなりたい」という没入感を生み、ユーザーは「後で見返すため」に保存ボタンを押します。</p>
                         </div>
                     </div>
                 </div>
                 <div class="slide-number">2 / 9</div>
             </section>
 
-            <!-- 3. Core Strategies (Text Heavy) -->
+            <!-- 3. Core Strategies -->
             <section>
                 <h2>1. 詳細戦略：Psychological Marketing</h2>
                 <p>小手先の流行ではなく、<strong>購買心理学</strong>に基づいた3つのアプローチ。</p>
@@ -196,18 +214,18 @@
                 <div class="slide-number">4 / 9</div>
             </section>
 
-            <!-- 5. Competitor & Risk -->
+            <!-- 5. Competitor & Risk (Problem Area fixed) -->
             <section>
                 <h2>3. 競合優位性とリスク管理</h2>
-                <div class="cols">
+                <div class="cols dense-text">
                     <div class="col-6">
                         <h3>Competitor Gap (勝機)</h3>
-                        <div class="box" style="font-size: 0.8em !important;">
+                        <div class="box">
                             <p><strong>他社（多くのセレクトショップ）:</strong><br>
                                 スタッフが顔出しで踊る。流行りの音源を使う。<br>
                                 <span style="color:red">→ スタッフ個人のファンしかつかない。退職リスク大。</span>
                             </p>
-                            <hr>
+                            <hr style="margin: 10px 0;">
                             <p><strong>THETA θ:</strong><br>
                                 顔出しなし。商品と空間が主役。映画的演出。<br>
                                 <span style="color:blue">→ <strong>「ブランドのファン」</strong>が資産として残る。</span>
@@ -216,7 +234,7 @@
                     </div>
                     <div class="col-6">
                         <h3>Risk Management (守り)</h3>
-                        <div class="box" style="font-size: 0.8em !important;">
+                        <div class="box">
                             <ul>
                                 <li><strong>コメントフィルター</strong>:<br>「高い」「ぼったくり」等のネガティブワードを自動ブロック。</li>
                                 <li><strong>権利関係の徹底</strong>:<br>著作権侵害リスクのある音源や画像を完全排除。</li>
@@ -228,42 +246,39 @@
                 <div class="slide-number">5 / 9</div>
             </section>
 
-            <!-- 6. Operational & iPhone Strategy (NEW) -->
+            <!-- 6. Operational & iPhone Strategy (Problem Area fixed) -->
             <section>
                 <h2>4. 制作体制とコストロジック</h2>
                 <h3>なぜ「iPhone撮影」なのか？</h3>
                 <p>コストカットのためではありません。<strong>TikTokで勝つための戦略的選択</strong>です。</p>
 
-                <div class="cols" style="margin-top:20px;">
+                <div class="cols dense-text" style="margin-top:20px;">
                     <div class="col-4">
                         <div class="box">
                             <h4>1. Macro & Cinematic</h4>
-                            <p style="font-size:0.8em !important;">iPhone 16
-                                Proの「マクロモード」は、数万円のレンズ以上の接写性能を持ちます。「シネマティックモード」を使えば、美しいボケ味も再現可能です。</p>
+                            <p>iPhone 16 Proの「マクロモード」は、数万円のレンズ以上の接写性能を持ちます。「シネマティックモード」を使えば、美しいボケ味も再現可能です。</p>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="box">
                             <h4>2. Algorithm Fit</h4>
-                            <p style="font-size:0.8em !important;">
-                                TikTokのAIは、過度に作り込まれたCM映像よりも、スマホで撮影された「リアルな高画質」を好んで拡散させる傾向があります。</p>
+                            <p>TikTokのAIは、過度に作り込まれたCM映像よりも、スマホで撮影された「リアルな高画質」を好んで拡散させる傾向があります。</p>
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="box">
                             <h4>3. Agile & Lean</h4>
-                            <p style="font-size:0.8em !important;">
-                                大掛かりな機材設営（照明・三脚）が不要なため、営業中の店内でもお客様の邪魔にならず、サッと撮影してすぐに編集に入れます。</p>
+                            <p>大掛かりな機材設営（照明・三脚）が不要なため、営業中の店内でもお客様の邪魔にならず、サッと撮影してすぐに編集に入れます。</p>
                         </div>
                     </div>
                 </div>
                 <div class="slide-number">6 / 9</div>
             </section>
 
-            <!-- 7. Cost Structure Slide (Requested) -->
+            <!-- 7. Cost Structure Slide (Problem Area fixed) -->
             <section>
                 <h2>5. なぜ、この価格で実現できるのか？</h2>
-                <div class="cols">
+                <div class="cols dense-text">
                     <div class="col-6">
                         <h3>一般的な制作会社 (相場: 50万〜)</h3>
                         <ul style="color:#666;">
@@ -283,7 +298,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="box" style="margin-top:20px; text-align:center; padding:10px;">
+                <div class="box" style="margin-top:10px; text-align:center; padding:10px;">
                     <p style="font-size:1.0em !important;"><strong>Message:</strong><br>
                         「機材」にお金をかける時代は終わりました。<br>
                         浮いた予算は、広告費や、より良い商品の仕入れ（お客様への還元）に使ってください。</p>
@@ -327,7 +342,7 @@
                         <td>△<br><span style="font-size:0.6em">まずは試したい方向け</span></td>
                     </tr>
                 </table>
-                <p style="margin-top:15px; font-size:0.7em !important; color:#666;">※契約期間:
+                <p style="margin-top:10px; font-size:0.7em !important; color:#666;">※契約期間:
                     3ヶ月〜（初期のアカウント設計・学習期間が必要なため）<br>※撮影は貴社ご協力（iPhone）または、私が訪問時にまとめて実施（交通費別途）のハイブリッド形式です。</p>
                 <div class="slide-number">8 / 9</div>
             </section>
@@ -339,7 +354,7 @@
                         流行を追うのではなく、<br>「質」で圧倒する。</h1>
                     <p>THETA θの服が持つ本来の力を、デジタルの力で最大限に引き出します。</p>
                 </div>
-                <div class="slide-number">9 / 9</div>
+                <!-- <div class="slide-number">9 / 9</div> -->
             </section>
 
         </div>
@@ -350,7 +365,7 @@
         Reveal.initialize({
             width: 1123,
             height: 794,
-            margin: 0.1,  /* Increased margin to prevent clipping */
+            margin: 0.1,
             minScale: 0.2,
             maxScale: 2.0,
             controls: true,
