Update year to 2026 and refine Slide 2 header

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -179,14 +179,14 @@
                     <p style="font-size: 1em; color: #666; letter-spacing: 0.2em;">TikTok Operation Proposal</p>
                     <h1 style="border: none; font-size: 3.0em !important; margin: 20px 0 40px 0 !important;">THETA θ
                     </h1>
-                    <p style="font-size: 1em;">2025 Strategic Growth Plan</p>
+                    <p style="font-size: 1em;">2026 Latest Strategic Plan</p>
                 </div>
                 <!-- <div class="slide-number">1 / 9</div> -->
             </section>
 
             <!-- 2. The Logic -->
             <section>
-                <h2>0. 戦略根拠：なぜ今「静かな戦略」なのか？</h2>
+                <h2>0. 戦略方針：アルゴリズムに評価される「没入」の設計</h2>
                 <div class="cols">
                     <div class="col-6">
                         <div class="box">
