Update Slide 2 header to 'Correctly Viral'

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -186,7 +186,7 @@
 
             <!-- 2. The Logic -->
             <section>
-                <h2>0. 戦略方針：アルゴリズムに評価される「没入」の設計</h2>
+                <h2>0. 戦略方針：大切なのは「正しくバズる」こと</h2>
                 <div class="cols">
                     <div class="col-6">
                         <div class="box">
