Increase table whitespace and line-height for Slide 4

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -148,10 +148,13 @@
         }
 
         td {
-            padding: 10px;
+            padding: 16px;
+            /* Increased from 10px for more breathability */
             border-bottom: 1px solid #ccc;
             border-right: 1px solid #ccc;
             vertical-align: top;
+            line-height: 1.8 !important;
+            /* Increase line spacing within cells */
         }
 
         td:last-child {
