Update Slide 5 content: Fix line breaks and replace risk text

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -275,8 +275,8 @@
                         <h3>Competitor Gap (勝機)</h3>
                         <div class="box">
                             <p><strong>他社（多くのセレクトショップ）:</strong><br>
-                                スタッフが顔出しで踊る。流行りの音源を使う。<br>
-                                <span style="color:red">→ スタッフ個人のファンしかつかない。退職リスク大。</span>
+                                スタッフの顔出しや、流行りのダンス。<br>
+                                <span style="color:red">→ 「人」にファンがつき、<strong>「服」の魅力が伝わらない。</strong></span>
                             </p>
                             <hr style="margin: 10px 0;">
                             <p><strong>THETA θ:</strong><br>
