Remove 'No face' reference, confirming model usage

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -280,7 +280,7 @@
                             </p>
                             <hr style="margin: 10px 0;">
                             <p><strong>THETA θ:</strong><br>
-                                顔出しなし。商品と空間が主役。映画的演出。<br>
+                                商品と空間が主役。映画的演出。<br>
                                 <span style="color:blue">→ <strong>「ブランドのファン」</strong>が資産として残る。</span>
                             </p>
                         </div>
