Add source citation to Slide 6

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -316,6 +316,8 @@
                         <div class="box">
                             <h4>2. Algorithm Fit</h4>
                             <p>TikTokのAIは、過度に作り込まれたCM映像よりも、スマホで撮影された「リアルな高画質」を好んで拡散させる傾向があります。</p>
+                            <p class="small-note" style="margin-top:5px; text-align:right;">※出典: TikTok for Business
+                                "Creative Codes"</p>
                         </div>
                     </div>
                     <div class="col-4">
