Fix Slide 7 Message line breaks and phrasing

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -353,10 +353,13 @@
                         </ul>
                     </div>
                 </div>
-                <div class="box" style="margin-top:10px; text-align:center; padding:10px;">
-                    <p style="font-size:1.0em !important;"><strong>Message:</strong><br>
+                <div class="box" style="margin-top:10px; text-align:center; padding:15px;">
+                    <p style="font-size:1.0em !important; line-height: 1.8 !important;">
+                        <strong>Message:</strong><br>
                         「機材」にお金をかける時代は終わりました。<br>
-                        浮いた予算は、広告費や、より良い商品の仕入れ（お客様への還元）に使ってください。</p>
+                        浮いた予算は、広告費や商品の仕入れに回し、<br>
+                        <strong>お客様への還元（より良い体験）</strong>に使ってください。
+                    </p>
                 </div>
                 <div class="slide-number">7 / 9</div>
             </section>
