Integrate TikTok Shop strategy into Slides 2 and 4

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -202,7 +202,8 @@
                         <div class="box">
                             <h3>② 保存数 (Saves)</h3>
                             <p><strong>エンタメより「憧れの蓄積」へ。</strong></p>
-                            <p>説明しすぎない「余白」のある動画は、「いつかこうなりたい」という没入感を生み、ユーザーは「後で見返すため」に保存ボタンを押します。</p>
+                            <p>説明しすぎない「余白」のある動画は、「いつかこうなりたい」という没入感を生み、保存されます。<br>この「蓄積」が、<strong>TikTok
+                                    Shopでの即時購入</strong>への最短ルートとなります。</p>
                         </div>
                     </div>
                 </div>
@@ -260,7 +261,7 @@
                     <tr>
                         <td><strong>Month 3</strong></td>
                         <td><strong>拡散・売上</strong><br>(Sales)</td>
-                        <td>・大型企画（他クリエイターコラボ等）。<br>・ヒット動画への広告ブースト。</td>
+                        <td>・<strong>TikTok Shop連携（動画内直販）</strong>。<br>・ヒット動画への広告ブースト。</td>
                         <td>月間リーチ: 50万imp<br><strong>売上貢献: 30万円〜</strong></td>
                     </tr>
                 </table>
